--- a/css/styles.css
+++ b/css/styles.css
@@ -58,6 +58,9 @@ body main {
   padding: 0;
   transition: color 0.3s;
 }
+.header .menu__nav .menu__carrito {
+  width: 80px;
+}
 .header a {
   font-family: "Arvo", serif;
   width: 100%;
@@ -190,6 +193,68 @@ body main {
 @media (min-width: 768px) {
   .presentacion .presentacion__texto .presentacion__texto__parrafo {
     font-size: 18px;
+  }
+}
+.formulario__datos {
+  display: grid;
+  width: 100%;
+}
+.formulario__datos .formulario__datos__1 {
+  background-color: #ffba00;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 10px 13px rgba(0, 0, 0, 0.3);
+  width: 300px;
+  justify-self: center;
+  flex-direction: wrap;
+}
+.formulario__datos .formulario__datos__1 label {
+  display: block;
+  margin-bottom: 8px;
+  font-family: "Arvo", serif;
+}
+.formulario__datos .formulario__datos__1 input {
+  width: 100%;
+  padding: 8px;
+  margin-bottom: 16px;
+  box-sizing: border-box;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+.formulario__datos .formulario__datos__1 button {
+  background-color: #91007d;
+  color: #fff;
+  padding: 10px;
+  margin-bottom: 15px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  width: 100%;
+  transition: backgroud-color 1s, color 1s;
+}
+.formulario__datos .formulario__datos__1 button:hover {
+  background-color: #ffba00;
+  color: #91007d;
+}
+.formulario__datos .formulario__datos__1 .formulario__datos__mensaje {
+  flex-direction: row;
+  justify-self: center;
+  align-self: center;
+  flex-wrap: wrap;
+  text-align: center;
+  font-size: 20px;
+  width: 90%;
+  font-family: "Open Sans", serif;
+}
+
+@media (max-width: 600px) {
+  .formulario__datos {
+    justify-content: center;
+    align-content: center;
+  }
+  .formulario__datos .formulario__datos__1 {
+    width: 80%;
+    overflow: hidden;
   }
 }
 .caracteristicas {
