--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -14,6 +14,8 @@ $sombra:0 10px 13px rgba(0, 0, 0, 0.3);
 $margin-secciones: 10px 0px 10px 0px;
 $margin-secciones2: 20px 0px 20px 0px;
 
+$fuente-arvo: 'Arvo', serif;
+
 body {
   margin: 0;
   padding: 0;
@@ -69,10 +71,13 @@ body {
       margin: 5px;
       height: 25px;
       padding: 0; 
-      transition: color 0.3s; 
+      transition: color 0.3s;
+      .menu__carrito {
+        width: 80px;
+      }
     }
     a {
-      font-family: 'Arvo', serif;
+      font-family: $fuente-arvo;
       width: 100%;
       height: 100%;
       margin: 5px;
@@ -84,7 +89,6 @@ body {
         &:hover {
             color:$color-principal;
             font-size: 20px;
-
         }
     }
 }
@@ -219,6 +223,67 @@ body {
   }  
 }
 
+.formulario__datos {
+  display: grid;
+  width: 100%;
+  .formulario__datos__1 {
+    background-color:$color-principal;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow:$sombra;
+    width: 300px;
+    justify-self: center;
+    flex-direction: wrap;
+    label {
+      display: block;
+      margin-bottom: 8px;
+      font-family: $fuente-arvo;
+    }
+    input {
+      width: 100%;
+      padding: 8px;
+      margin-bottom: 16px;
+      box-sizing: border-box;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+    }
+    button {
+      background-color: $color-tercero;
+      color: #fff;
+      padding: 10px;
+      margin-bottom: 15px;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+      width: 100%;
+      transition: backgroud-color 1s, color 1s;
+        &:hover {
+          background-color: $color-principal;
+          color: $color-tercero;
+        }
+    }
+    .formulario__datos__mensaje {
+      flex-direction: row;
+      justify-self: center;
+      align-self: center;
+      flex-wrap: wrap;
+      text-align: center;
+      font-size: 20px;
+      width: 90%;
+      font-family: 'Open Sans', serif;
+    }
+  }
+}
+@media (max-width:600px) {
+  .formulario__datos {
+    justify-content: center;
+    align-content: center;
+    .formulario__datos__1 {
+      width: 80%;
+      overflow: hidden;
+    }
+  }
+}
 
 
 .caracteristicas {
