--- a/views/404.html
+++ b/views/404.html
@@ -18,18 +18,26 @@
     <header class="header">
         <nav class="header__menu">
             <div class="logo__mobile"> 
-                <a href="../index.html" ><img id="logo-inicio" src="../Imagenes/GLM.png"alt="Logo Ghetto Life Muzik" width="80px"></a> 
+                <a href="../index.html" ><img id="logo-inicio" src="../Imagenes/GLM.png" alt="Logo Ghetto Life Muzik" width="80px"></a> 
             </div>
+            
             <ul class="menu__nav">
-                <li><a src="" href="productos.html">Productos</a></li>
-                <li><a href="nosotros.html">Nosotros</a></li>
-                <li><a href="contacto.html">Contacto</a></li>
+                <li><a class=links__cambio href="views/productos.html">Productos</a></li>
+                <li><a class=links__cambio href="views/nosotros.html">Nosotros</a></li>
+                <li><a class=links__cambio href="views/contacto.html">Contacto</a></li>
             </ul> 
             </div>
-        </nav>  
+            <div class=menu__carrito>
+                <a  href="./views/carrito.html"><img src="../Imagenes/Carrito.png" alt="imagen carrito" width="40px"></a>
+            </div>
+        </nav>
+       
+       
     </header>
-    <h1>Error 404:not found</h1>
-    <p>esta pagina no existe</p>
+    <main>
+        <h1>Error 404:not found</h1>
+        <p>esta pagina no existe</p>
+    </main>
     <footer class="footer ">
         <div class="separador"></div>
         <h5 class="footer__titulo text-warning">Redes Sociales y Links</h5>
@@ -42,6 +50,6 @@
         </div>
         
     </footer>
-
+    <script src="../js/main.js"></script>
 </body>
 </html>
