--- a/views/contacto.html
+++ b/views/contacto.html
@@ -18,15 +18,21 @@
     <header class="header">
         <nav class="header__menu">
             <div class="logo__mobile"> 
-                <a href="../index.html" ><img id="logo-inicio" src="../Imagenes/GLM.png"alt="Logo Ghetto Life Muzik" width="80px"></a> 
+                <a href="../index.html" ><img id="logo-inicio" src="../Imagenes/GLM.png" alt="Logo Ghetto Life Muzik" width="80px"></a> 
             </div>
+            
             <ul class="menu__nav">
-                <li><a src="" href="productos.html">Productos</a></li>
-                <li><a href="nosotros.html">Nosotros</a></li>
-                <li><a href="contacto.html">Contacto</a></li>
+                <li><a class=links__cambio href="productos.html">Productos</a></li>
+                <li><a class=links__cambio href="nosotros.html">Nosotros</a></li>
+                <li><a class=links__cambio href="contacto.html">Contacto</a></li>
             </ul> 
             </div>
-        </nav>  
+            <div class=menu__carrito>
+                <a  href="carrito.html"><img src="../Imagenes/Carrito.png" alt="imagen carrito" width="40px"></a>
+            </div>
+        </nav>
+       
+       
     </header>
     <main class="main__contacto">
         <h1 class="main__contacto__titulo">Contacto</h1> 
@@ -90,13 +96,13 @@
         <h5 class="footer__titulo text-warning">Redes Sociales y Links</h5>
         
         <div class="footer__links">
-            <a href="views/contacto.html">Contacto</a>
+            <a href="contacto.html">Contacto</a>
             <a href="https://www.instagram.com/ghettolifemuzik/">Instagram</a>
             <a href="https://wa.me/56954762733">Whatsapp </a>
             <a href="https://www.youtube.com/@GhettoLifeMuzik">Youtube</a>
         </div>
         
     </footer>
-
+    <script src="../js/main.js"></script>
 </body>
 </html>
