arreglando productos y carrito

--- a/views/productos.html
+++ b/views/productos.html
@@ -101,7 +101,8 @@
       <section id="catalogo" class="catalogo">
         <div class="separador"></div>
         <h2>Catalogo</h2>
-        <div id="catalogo__lista"></div>
+        <div id="catalogoLista" class="catalogo__lista">
+        </div>
       </section>
     </main>
     <footer class="footer ">
