--- a/css/styles.css
+++ b/css/styles.css
@@ -613,11 +613,13 @@ body main {
   align-content: center;
   width: 100%;
   overflow: hidden;
+  background-image: linear-gradient(to left, #360036, #000000);
 }
 .catalogo h2 {
   text-align: center;
-  margin: 30px;
   width: 100%;
+  font-weight: 40px;
+  margin: 50px 0px 40px 0px;
 }
 .catalogo h3 {
   text-align: center;
@@ -835,6 +837,88 @@ body main {
   margin-bottom: 0;
 }
 
+.catalogo__lista {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  width: 100%;
+  justify-content: center;
+}
+.catalogo__lista div {
+  display: grid;
+  width: 300px;
+  height: 300px;
+  padding: 10px;
+  margin: 10px 0px 10px 0px;
+  align-self: center;
+  text-align: center;
+  border-radius: 20px;
+  background-color: black;
+  border-color: black;
+  transition: border 1s, border-color 2s;
+}
+.catalogo__lista div:hover {
+  border: 10px;
+  border-color: #ffba00;
+}
+.catalogo__lista div h3 {
+  text-align: center;
+  font-weight: bold;
+  width: 100%;
+  height: 48px;
+}
+.catalogo__lista div button {
+  display: flex;
+  justify-content: center;
+  justify-self: center;
+  background-color: #91007d;
+  color: #fff;
+  padding: 10px;
+  margin-bottom: 15px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  width: 260px;
+  transition: backgroud-color 1s, color 1s;
+}
+.catalogo__lista div button:hover {
+  background-color: #ffba00;
+  color: #91007d;
+}
+.catalogo__lista .catalogo__subtitulo {
+  text-decoration: underline;
+  color: #ffba00;
+  font-size: 18px;
+  text-align: center;
+}
+.catalogo__lista .catalogoListaPrecio {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-self: flex-end;
+  font-size: 20px;
+  text-align: center;
+  font-weight: bold;
+}
+
+@media (max-width: 1439px) {
+  .catalogo__lista div {
+    margin: 10px 5px 10px 5px;
+  }
+}
+@media (min-width: 1440px) {
+  .catalogo {
+    flex-flow: row wrap;
+  }
+  .catalogo .catalogo__lista {
+    display: flex;
+    align-content: center;
+  }
+  .catalogo .catalogo__lista div {
+    margin: 10px 100px 10px 100px;
+    justify-self: center;
+  }
+}
 /* Views/Nosotros */
 .nosotros__presentacion {
   display: grid;
