--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -679,12 +679,15 @@ body {
   flex-direction: column;
   justify-content: center;
   align-content: center;
+
   width: 100%;
   overflow: hidden;
+  background-image: $fondo-gradiente;
   h2 {
     text-align: center;
-    margin: 30px;
     width: 100%;
+    font-weight: 40px;
+    margin: 50px 0px 40px 0px;
   }
   h3 {
     text-align: center;
@@ -912,7 +915,96 @@ body {
   }
 }
 
+.catalogo__lista {
+  display:flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  width: 100%;
+  justify-content: center;
+  
+  div {
+    display: grid;
+    width: 300px;
+    height: 300px;
+    padding: 10px;
+    margin: 10px 0px 10px 0px;
 
+    align-self: center;
+    text-align: center;
+
+    border-radius: 20px;
+    background-color: black;
+    border-color: black;
+    transition: border 1s, border-color 2s;
+      &:hover {
+        border: 10px;
+        border-color: $color-principal;
+      }
+    h3 {
+      text-align: center;
+      font-weight: bold;
+      width: 100%;
+      height: 48px;
+    }
+    button {
+      display: flex;
+      justify-content: center;
+      justify-self: center;
+      background-color: $color-tercero;
+      color: #fff;
+      padding: 10px;
+      margin-bottom: 15px;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+      width: 260px;
+      transition: backgroud-color 1s, color 1s;
+        &:hover {
+           background-color: $color-principal;
+          color: $color-tercero;
+        }
+    }
+  }
+
+  .catalogo__subtitulo {
+    text-decoration:underline;
+    color:$color-principal;
+    font-size: 18px;
+    text-align: center;
+  }
+  .catalogoListaPrecio {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-self: flex-end;
+    font-size: 20px; 
+    text-align: center;
+    font-weight: bold;
+  }
+}
+
+@media (max-width:1439px) {
+  .catalogo__lista{
+    div{
+      margin: 10px 5px 10px 5px;
+    }
+  }
+}
+@media (min-width:1440px) {
+  .catalogo {
+    flex-flow: row wrap;
+
+    .catalogo__lista{
+      display: flex;
+      
+      align-content: center;
+      div{
+        margin: 10px 100px 10px 100px;
+        justify-self: center;
+      }
+    }
+  }
+}
 
 
 /* Views/Nosotros */
